platform/bootstrap/networking/network-policies/allow/allow-dns-egress-identity.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns-egress
  namespace: keycloak
  annotations:
    argocd.argoproj.io/sync-wave: "6"
spec:
  podSelector: {}
  policyTypes:
    - Egress

  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
