platform/bootstrap/networking/network-policies/allow/allow-keycloak-from-workloads.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-keycloak-from-workloads
  namespace: keycloak
  annotations:
    argocd.argoproj.io/sync-wave: "6"
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: keycloak

  policyTypes:
  - Ingress
  - Egress

  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          tier: workloads
    - namespaceSelector:
        matchLabels:
          tier: ingress
    ports:
    - protocol: TCP
      port: 8080

  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          tier: data
    ports:
    - protocol: TCP
      port: 5432
