platform/bootstrap/networking/network-policies/allow/allow-postgres-from-workloads.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-postgres-from-workloads
  namespace: postgres
  annotations:
    argocd.argoproj.io/sync-wave: "6"
spec:
  podSelector:
    matchLabels:
      network-role: data

  policyTypes:
  - Ingress

  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          tier: workloads
      podSelector:
        matchLabels:
          access.postgres: "true"
    - namespaceSelector:
        matchLabels:
          tier: identity
      podSelector:
        matchLabels:
          network-role: identity
    ports:
    - protocol: TCP
      port: 5432
