platform/bootstrap/networking/network-policies/allow/allow-rabbitmq-from-workloads.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-rabbitmq-from-workloads
  namespace: rabbitmq
  annotations:
    argocd.argoproj.io/sync-wave: "6"
spec:
  podSelector:
    matchLabels:
      app: app.kubernetes.io/name=rabbitmq
  
  policyTypes:
  - Ingress

  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          tier: workloads
      podSelector:
        matchLabels:
          app: transaction-service
    - namespaceSelector:
        matchLabels:
          tier: workloads
      podSelector:
        matchLabels:
          app: auth-service
    ports:
    - protocol: TCP
      port: 5672
  - from:
    - namespaceSelector:
        matchLabels:
          tier: ingress
    ports:
    - protocol: TCP
      port: 15672
