platform/bootstrap/networking/network-policies/allow/allow-redis-from-workloads.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-redis-from-workloads
  namespace: redis
  annotations:
    argocd.argoproj.io/sync-wave: "6"
spec:
  podSelector:
    matchLabels:
      app: app.kubernetes.io/name=redis

  policyTypes:
  - Ingress

  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          tier: workloads
      podSelector:
        matchLabels:
          app: auth-service
    ports:
    - protocol: TCP
      port: 6379
