platform/bootstrap/networking/network-policies/allow/allow-services-from-gateway.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-services-from-gateway
  namespace: microbank-dev
  annotations:
    argocd.argoproj.io/sync-wave: "6"
spec:
  podSelector:
    matchLabels:
      network-role: backend   # label all non-gateway services

  policyTypes:
  - Ingress

  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          tier: workloads
      podSelector:
        matchLabels:
          network-role: gateway
    ports:
    - protocol: TCP
